--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,6 @@ jobs:
   test:
     docker:
       - image: circleci/golang:1.16
-        environment:
-          GO111MODULE: "on"
     working_directory: /go/kubetool
     steps:
       - checkout
@@ -21,8 +19,6 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.16
-        environment:
-          GO111MODULE: "on"
     working_directory: /go/kubetool
     steps:
       - checkout
@@ -35,7 +31,7 @@ jobs:
           CIRCLE_PROJECT_USERNAME: $CIRCLE_PROJECT_USERNAME
           CIRCLE_PROJECT_REPONAME: $CIRCLE_PROJECT_REPONAME
           CIRCLE_TAG: $CIRCLE_TAG
-          GO111MODULE: "on"
+          GOFLAGS: '-mod=mod'
     working_directory: /go/kubetool
     steps:
       - checkout
