--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: kubetool-artifact
-          path: ./kubetool-cli
+          path: .
       - name: Setup tests
         run: |
           #!/bin/bash
