--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -56,6 +56,7 @@ jobs:
           kubectl create namespace test
           sleep 10
           kubectl run test --image=alpine --namespace test -- tail /dev/null
+          kubectl apply -f fixture/patchmanagement.yaml -n test
       - name: Acceptance tests
         run: |
           #!/bin/bash
