--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,6 +21,10 @@ jobs:
           go-version: '1.19'
       - name: Build
         run: make build
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
       - name: Temporarily save cli
         uses: actions/upload-artifact@v2
         with:
@@ -45,7 +49,7 @@ jobs:
           flags: unittests
           fail_ci_if_error: true
       - name: Setup Minikube
-        uses: manusa/actions-setup-minikube@v2.4.2
+        uses: manusa/actions-setup-minikube@v2.7.2
         with:
           minikube version: 'v1.28.0'
           kubernetes version: 'v1.23.13'
