--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -43,11 +43,11 @@ jobs:
           go-version: '1.19'
       - name: Unit test
         run: make test
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v3
         with:
           files: coverage.txt
           flags: unittests
-          fail_ci_if_error: true
+          fail_ci_if_error: false
       - name: Setup Minikube
         uses: manusa/actions-setup-minikube@v2.7.2
         with:
